--- a/software/usb_ir/packaging/debian/control
+++ b/software/usb_ir/packaging/debian/control
@@ -2,14 +2,14 @@ Source: iguanair
 Section: utils
 Priority: optional
 Maintainer: IguanaWorks [support@iguanaworks.net]
-Build-Depends: debhelper (>=5)
+Build-Depends: debhelper (>=5), libpopt-dev (>=1.10), libusb-dev (>=0.1.10)
 Standards-Version: 3.7.2.2
 
 Package: iguanair
 Architecture: any
 Section: utils
 Pre-Depends: ${shlibs:Depends}
-Depends: udev (>= 0.99), libusb-0.1-4 (>= 0.1.10)
+Depends: udev (>= 0.99), libusb-0.1-4 (>= 0.1.10), libpopt (>=1.10)
 Essential: no
 Recommends: lirc
 Description: This is the IguanaWorks USB IR daemon/driver and
