--- a/software/usb_ir/packaging/debian/control
+++ b/software/usb_ir/packaging/debian/control
@@ -9,7 +9,7 @@ Package: iguanair
 Architecture: any
 Section: utils
 Pre-Depends: ${shlibs:Depends}
-Depends: udev (>= 0.99), libusb-0.1-4 (>= 0.1.10), libpopt (>=1.10)
+Depends: udev (>= 0.99), libusb-0.1-4 (>= 0.1.10), libpopt0 (>=1.10)
 Essential: no
 Recommends: lirc
 Description: This is the IguanaWorks USB IR daemon/driver and
