--- a/software/usb_ir/packaging/debian/rules
+++ b/software/usb_ir/packaging/debian/rules
@@ -44,6 +44,10 @@ install: build
 	# main install
 	make install DESTDIR=$(CURDIR)/debian/tmp
 
+	#add symlink for library
+	ln -s libiguanaIR.so libiguanaIR.so.0
+	mv libiguanaIR.so.0 $(CURDIR)/debian/tmp/usr/lib/
+
 	# move the python stuff into it's sub package
 	mkdir -p $(CURDIR)/debian/iguanair-python/usr/lib
 	mv $(CURDIR)/debian/tmp/usr/lib/python* $(CURDIR)/debian/iguanair-python/usr/lib
