--- a/software/usb_ir/packaging/debian/rules
+++ b/software/usb_ir/packaging/debian/rules
@@ -30,6 +30,7 @@ clean:
 	dh_testroot
 	-rm -f build-stamp configure-stamp
 	make distclean || exit 0
+	make -C packaging ../debian
 	dh_clean
 
 	# remove the build directories
