--- a/software/usb_ir/Makefile.in
+++ b/software/usb_ir/Makefile.in
@@ -18,9 +18,9 @@ LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 INSTALL = @INSTALL@
 
-SYMEXT = so
-SHAREEXT = so.0
-SHAREARG = -shared -Wl,-soname=libiguanaIR.$(SHAREEXT),--version-script=ig.ver
+SHAREEXT = so
+LIBNAME=libiguanaIR.$(SHAREEXT).0
+SHAREARG = -shared -Wl,-soname=libiguanaIR.$(SHVEREXT),--version-script=ig.ver
 ifeq ($(shell uname -m),x86_64)
   LIBDIR  = lib64
   CFLAGS += -fpic
@@ -35,18 +35,17 @@ else
       CFLAGS += -fPIC
       CPPFLAGS += -I/sw/include
       LDFLAGS += -L/sw/lib
-      SYMEXT =
       SHAREARG = -dynamiclib
       SHAREEXT = dylib
+      LIBNAME=libiguanaIR.$(SHAREEXT)
     endif
   endif
 endif
 
-LIBNAME=libiguanaIR.$(SHAREEXT)
 
 .PHONY: all
 all: igclient igdaemon
-igclient igdaemon: libiguanaIR.$(SHAREEXT)
+igclient igdaemon: $(LIBNAME)
 
 $(LIBNAME): iguanaIR.o support.o dataPackets.o compat.o pipes.o
 	$(CC) $(SHAREARG) $(LDFLAGS) $^ -o $@
@@ -114,21 +113,19 @@ else
 endif
 
 # install a non-versioned symlink
-ifneq ($(SYMEXT),)
+ifneq ($(LIBNAME),libiguanaIR.$(SHAREEXT))
 install: install-symlink
 .PHONY: install-symlink
 install-symlink:
 	install -d $(DESTDIR)/usr/$(LIBDIR)
-	ln -s libiguanaIR.$(SHAREEXT) \
-	      $(DESTDIR)/usr/$(LIBDIR)/libiguanaIR.$(SYMEXT)
+	ln -s $(LIBNAME) $(DESTDIR)/usr/$(LIBDIR)/libiguanaIR.$(SHAREEXT)
 endif
 
 .PHONY: install
 install: all
 	install -D igclient $(DESTDIR)/usr/bin/igclient
 	install -D igdaemon $(DESTDIR)/usr/bin/igdaemon
-	install -D libiguanaIR.$(SHAREEXT) \
-	           $(DESTDIR)/usr/$(LIBDIR)/libiguanaIR.$(SHAREEXT)
+	install -D $(LIBNAME) $(DESTDIR)/usr/$(LIBDIR)/$(LIBNAME)
 	install -D iguanaIR.init $(DESTDIR)/etc/init.d/iguanaIR
 	install -D --mode 644 iguanaIR.options $(DESTDIR)/etc/default/iguanaIR
 	install -D iguanaIR.h $(DESTDIR)/usr/include/iguanaIR.h
@@ -149,7 +146,7 @@ uninstall:
 	/etc/init.d/iguanaIR stop || true
 	rm -f $(DESTDIR)/usr/bin/igclient
 	rm -f $(DESTDIR)/usr/bin/igdaemon
-	rm -f $(DESTDIR)/usr/$(LIBDIR)/libiguanaIR.$(SHAREEXT)
+	rm -f $(DESTDIR)/usr/$(LIBDIR)/$(LIBNAME)
 	rm -f $(DESTDIR)/etc/init.d/iguanaIR
 	rm -f $(DESTDIR)/etc/default/iguanaIR
 	rm -f $(DESTDIR)/usr/include/iguanaIR.h
