--- a/software/usb_ir/win32/igclient.vcproj
+++ b/software/usb_ir/win32/igclient.vcproj
@@ -188,11 +188,23 @@
 				>
 			</File>
 			<File
+				RelativePath="..\compat.c"
+				>
+			</File>
+			<File
 				RelativePath="..\list.c"
 				>
 			</File>
 			<File
+				RelativePath="..\pipes.c"
+				>
+			</File>
+			<File
 				RelativePath=".\popt\popt-fix.c"
+				>
+			</File>
+			<File
+				RelativePath="..\support.c"
 				>
 			</File>
 		</Filter>
