Changed usage of tmp3 in main_prog so that we can use tmp3 in read_buffer

--- a/firmware/usb_ir.loader/loader.inc.in
+++ b/firmware/usb_ir.loader/loader.inc.in
@@ -15,6 +15,7 @@
 FLAG_HALTED:     EQU 0x01
 FLAG_BODY_INIT:  EQU 0x02
 FLAG_BODY_RESET: EQU 0x04
+FLAG_READING:    EQU 0x08
 
 ;INSERT_CODES_HERE
 
