Found a bug in the body code while I was looking at the memory usage.  Also checking in the development hex file to make life easier for other devs.

--- a/firmware/usb_ir.body/body.inc.in
+++ b/firmware/usb_ir.body/body.inc.in
@@ -12,6 +12,10 @@
 ; * See LICENSE for license details.
 ; */
 
+; flags used by the body code
+RX_ON_FLAG:       EQU 0x01
+RX_OVERFLOW_FLAG: EQU 0x02
+
 ;INSERT_CODES_HERE
 
 ; other constants
