Updating the autoconf code to allow users to turn the no-threads option on and off.  Also fixing some shortcomings of the configure scripts including a bug in the downloaded ac_python_devel.m4

--- a/software/usb_ir/config.h.in
+++ b/software/usb_ir/config.h.in
@@ -138,6 +138,9 @@
 /* whether to use threads with libusb */
 #undef LIBUSB_NO_THREADS
 
+/* whether to makes threads optional with libusb */
+#undef LIBUSB_NO_THREADS_OPTIONS
+
 /* version of libusb */
 #undef LIBUSB_VERSION
 
