Added dh_makeshlibs to teh debian rules file -- should fix the problem of compiling lirc from source on some ubuntu installs (64bit?) because it doesn't know it has the libiguanaIR library since it isn't listed in the debian library list.

--- a/software/usb_ir/packaging/debian/rules
+++ b/software/usb_ir/packaging/debian/rules
@@ -41,6 +41,7 @@ install: build
 	dh_testroot
 	dh_clean -k
 	dh_installdirs
+	dh_makeshlibs
 
 	# main install
 	make install DESTDIR=$(CURDIR)/debian/tmp
