Properly notify when the read buffer command destroys the buffer contents.  Also fix a bug in detecting a 0 read.

--- a/firmware/usb_ir.loader/loader.inc.in
+++ b/firmware/usb_ir.loader/loader.inc.in
@@ -12,9 +12,10 @@
 ; */
 
 ; flag bits provided by the loader
-FLAG_HALTED:     EQU 0x01
-FLAG_BODY_INIT:  EQU 0x02
-FLAG_BODY_RESET: EQU 0x04
+FLAG_HALTED:      EQU 0x01
+FLAG_BODY_INIT:   EQU 0x02
+FLAG_BODY_RESET:  EQU 0x04
+FLAG_BODY_BUFCLR: EQU 0x08
 
 ;INSERT_CODES_HERE
 
