--- a/software/usb_ir/reflasher/Makefile
+++ b/software/usb_ir/reflasher/Makefile
@@ -1,22 +1,26 @@
 NAME=iguanaIR-reflasher
+prefix=/usr
 
 all:
 
 dev devel:
-	ln -s ../../usb_ir.body/output/usb_ir.hex hex/body-0.hex
-	ln -s ../../usb_ir.loader/output/usb_ir.hex hex/loader-0.hex
+	rm -f hex/body-0.hex
+	ln -s ../../../../firmware/usb_ir.body/output/usb_ir.hex hex/body-0.hex
+	rm -f hex/loader-0.hex
+	ln -s ../../../../firmware/usb_ir.loader/output/usb_ir.hex hex/loader-0.hex
 
 install:
-	install -d $(DESTDIR)/usr/lib/$(NAME)/hex
-	install upgrade-usb $(DESTDIR)/usr/lib/$(NAME)
-	install $(filter-out hex/loader-0.hex hex/body-0.hex, $(wildcard hex/*.hex)) $(DESTDIR)/usr/lib/$(NAME)/hex
-	install -d $(DESTDIR)/usr/bin
-	ln -s ../lib/$(NAME)/upgrade-usb $(DESTDIR)/usr/bin/$(NAME)
+	install -d $(DESTDIR)$(prefix)/lib/$(NAME)/hex
+	install upgrade-usb $(DESTDIR)$(prefix)/lib/$(NAME)
+	install $(filter-out hex/loader-0.hex hex/body-0.hex, $(wildcard hex/*.hex)) $(DESTDIR)$(prefix)/lib/$(NAME)/hex
+	install -d $(DESTDIR)$(prefix)/bin
+	rm -f $(DESTDIR)$(prefix)/bin/$(NAME)
+	ln -s ../lib/$(NAME)/upgrade-usb $(DESTDIR)$(prefix)/bin/$(NAME)
 
 uninstall:
-	rm -f $(DESTDIR)/usr/bin/$(NAME)
-	rm -f $(DESTDIR)/usr/lib/$(NAME)/hex/*.hex
-	rmdir $(DESTDIR)/usr/lib/$(NAME)/hex 2>/dev/null || true
-	rm -f $(DESTDIR)/usr/lib/$(NAME)/upgrade-usb
+	rm -f $(DESTDIR)$(prefix)/bin/$(NAME)
+	rm -f $(DESTDIR)$(prefix)/lib/$(NAME)/hex/*.hex
+	rmdir $(DESTDIR)$(prefix)/lib/$(NAME)/hex 2>/dev/null || true
+	rm -f $(DESTDIR)$(prefix)/lib/$(NAME)/upgrade-usb
 
 .PHONY: all rpm dev devel tarball install
